--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,15 @@
   background-color: #cc533e;
   float: left;
 } 
-
+#moreInfo{
+  background-color: #cc533e;
+  width: 40%;
+  height: 200px;
+  opacity: 0.9;
+  float: left;
+  margin-top: 10px;
+}
+  
  #farmersList{
    opacity: 0.9;
     float: right;
