--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,6 @@
-
 .map {
   width: 40%;
   height: 400px;
-  opacity: 0.9;
   background-color: #cc533e;
   float: left;
 } 
@@ -10,16 +8,14 @@
   background-color: #cc533e;
   width: 40%;
   height: 200px;
-  opacity: 0.9;
   float: left;
-  margin-top: 10px;
+  margin-top: 50px;
 }
   
  #farmersList{
-   opacity: 0.9;
     float: right;
     width: 40%;
-    height: 610px;
+    height: 400px;
     background-color: #cc533e;
 } 
 
@@ -74,4 +70,9 @@ html, body {
 }
 #list{
   display:inline-block;
+}
+.farm-list{
+  margin-bottom: 10px;
+  display: inline-block;
+  
 }
