--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+.nav-wrapper {
+  color: white;
+  background-color: #cc533e;
+}
 .map {
   width: 40%;
   height: 400px;
@@ -18,6 +22,15 @@
     height: 400px;
     background-color: #cc533e;
 } 
+
+#aboutUs {
+  opacity: 0.9;
+  margin-top: 5px;
+  align: center;
+  width: 100%;
+  height: 300px;
+  background-color: #cc533e;
+}
 
 html, body {
   height:100%;
