--- a/styles.css
+++ b/styles.css
@@ -1,46 +1,39 @@
-.nav-wrapper {
-  color: white;
-  background-color: #cc533e;
-}
-.map {
-  width: 40%;
-  height: 400px;
-  background-color: #cc533e;
-  float: left;
-}
-#moreInfo {
-  background-color: #cc533e;
-  width: 40%;
-  height: 200px;
-  float: left;
-  margin-top: 50px;
-}
-
-#farmersList {
-  float: right;
-  width: 40%;
-  height: 400px;
-  background-color: #cc533e;
-}
-
-#aboutUs {
-  opacity: 0.9;
-  margin-top: 5px;
-  align: center;
-  width: 100%;
-  height: 300px;
-  background-color: #cc533e;
-}
-
-html,
 body {
   height: 100%;
   background-image: url("images/sunset.jpg");
   font-family: Montserrat, sans-serif;
 }
 
-.well {
-  background-color: #ffffee;
+.nav-wrapper {
+  color: white;
+  background-color: #cc533e;
+}
+.map {
+  width: 50%;
+  height: 400px;
+  background-color: #cc533e;
+  float: left;
+}
+#moreInfo {
+  background-color: #cc533e;
+  /* width: 40%;
+  height: 200px; */
+  float: left;
+  /* margin-top: 50px; */
+}
+
+#farmersList {
+  float: right;
+  background-color: #cc533e;
+}
+
+#aboutUs {
+  opacity: 0.9;
+  margin-top: 5px;
+  text-align: center;
+  width: 100%;
+  height: 300px;
+  background-color: #cc533e;
 }
 
 #content {
@@ -56,9 +49,9 @@ body {
   width: 100%;
 }
 
-.input-group-btn {
+/* .input-group-btn {
   max-width: 38px;
-}
+} */
 
 #search {
   border: 1px;
@@ -87,4 +80,11 @@ body {
 .farm-list {
   margin-bottom: 10px;
   display: inline-block;
+}
+
+.waves-effect.waves-brown .waves-ripple {
+   background-color: rgba(121, 85, 72, 0.65);
+ }
+.container{
+  display: inline;
 }
