--- a/styles.css
+++ b/styles.css
@@ -23,13 +23,18 @@
     background-color: #cc533e;
 } 
 
-#aboutUs {
-  opacity: 0.9;
+.card {
+  /*opacity: 0.9;
   margin-top: 5px;
   align: center;
-  width: 100%;
+  width: 100%; */
+  color: white;
   height: 300px;
+  margin-top: 10%;
+  margin-left: 10%;
+  margin-right: 10%;
   background-color: #cc533e;
+  
 }
 
 html, body {
