--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
   height: 100%;
-  background-image: url("https://www.75centralphotography.com/wp-content/uploads/2019/01/farm-sunset-west-texas-landscape.jpg");
+  background-image: url(./Images/farm-sunset-west-texas-landscape.JPG);
   font-family: Montserrat, sans-serif;
   background-size: cover;
  background-repeat: no-repeat;
