About Us top 10 reasons to shop at FMs

--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ body {
   align: center;
   width: 100%; */
   color: white;
-  height: 300px;
+  height: 100%;
   margin-top: 10%;
   margin-left: 10%;
   margin-right: 10%;
