--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body {
 }
 #moreInfo {
   background-color: #cc533e;
-  float: left;
+
 }
 
 #farmersList {
@@ -27,6 +27,7 @@ body {
   display: flex;
   width: 100%;
 }
+
 
 .card {
   /*opacity: 0.9;
@@ -107,4 +108,6 @@ body {
   text-align: center;
 
 }
-
+ #address, #products, #schedule {
+   color: white;
+ }
