--- a/styles.css
+++ b/styles.css
@@ -13,19 +13,26 @@ body {
 .map {
   width: 100%;
   height: 400px;
-  background-color: #cc533e;
+  
   float: left;
 }
 #moreInfo {
-  background-color: #cc533e;
+  background-color: rgb(204, 83, 62, .65);
   float: left;
+  border-radius: 10px;
+  font-size: 20px;
 }
 
 #farmersList {
   float: right;
-  background-color: #cc533e;
+  background-color: rgb(204, 83, 62, .65);
   display: flex;
   width: 100%;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
 }
 
 .card {
@@ -107,4 +114,5 @@ body {
   text-align: center;
 
 }
+
 
