--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,8 @@ body {
 .map {
   width: 100%;
   height: 400px;
-  
+  border-style: solid;
+  border-width: thin;
   float: left;
 }
 #moreInfo {
@@ -26,6 +27,8 @@ body {
   padding-right: 2px;
   margin-left: 5px;
   margin-right: 5px;
+  border-style: solid;
+  border-width: thin;
 }
 
 #farmersList {
@@ -37,6 +40,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  border-style: solid;
+  border-width: thin;
   
 }
 
