--- a/styles.css
+++ b/styles.css
@@ -137,6 +137,8 @@ body {
   color: white;
   margin: auto;
   vertical-align: middle;
+  text-align: center;
+  font-family: indie flower;
 }
  #address, #products, #schedule {
    color: white;
