--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
   height: 100%;
   background-image: url(./Images/farm-sunset-west-texas-landscape.JPG);
-  font-family: Montserrat, sans-serif;
+  font-family: lato, sans-serif;
   background-size: cover;
  background-repeat: no-repeat;
 }
@@ -10,6 +10,7 @@ body {
   color: white;
   background-color: #cc533e;
 }
+
 .map {
   width: 100%;
   height: 400px;
