edited commented out text, removed error

--- a/styles.css
+++ b/styles.css
@@ -154,11 +154,10 @@ body {
   position: relative;
   /* animation-name: mymove;
   animation: mymove 2s;
-  animation-timing-function: linear;
-  
-}
+  animation-timing-function: linear;*/
+ }
 
-@keyframes mymove {
+/* @keyframes mymove {
   from {left: -700px;}
   to {left: 50px;}
 } */
