--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
   height: 100%;
-  background-image: url(./Images/farm-sunset-west-texas-landscape.jpg);
+  background-image: url(Images/farm-sunset-west-texas-landscape.jpg);
   font-family: lato, sans-serif;
   background-size: cover;
  background-repeat: no-repeat;
