--- a/styles.css
+++ b/styles.css
@@ -106,7 +106,7 @@ body {
   font-family: indie flower;
 }
 
-.nav-wrapper, nav, h4, h5{
+.nav-wrapper, nav, h4, h5, h3{
   font-family: indie flower;
 }
 
